Correction alignement au centre du profil sur mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2363,7 +2363,7 @@ html {
 
   .profile-header-main {
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
   }
 
   .profile-header-actions {
